	* sched/mq_notify.c:  Set errno appropriately on failures.  There are
	  still several message queue functions that do not set errno!
	* arch/arm/src/stm32: Fixes to several STM32F40xxx files (contributed by
	  Mikhail Bychek).
	* configs/stm3210e-eval/src/up_lcd.c:  Fix banding problem on the R61580
	  LCD
	* configs/stm3240g-eval/ostest:  The basic STM32F40xx bringup is functional
	  (11/12/06) for the STM3240G-EVAL board and passes the OS test.
	* configs/stm3240g-eval/nsh:  Adds a NuttShell (NSH) configure for the
	  STM3240G-EVAL board.

6.13 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/stm32/stm32f40xxx_dma.c:  Add DMA support for the STM32 F4
	  family (untested on initial check-in)
	* arch/arm/src/armv7-m/up_fpu.c:  Add logic for saving an restoring VFP
	  floating point registers on context switches (but also disable the FPU
	  because CodeSourcery doesn't support hard flowing point!)
	* arch/arm/src/stm32/chip/stm32_eth.h:  Add Ethernet register definitions
	  for the STM32 F4.
	* arch/arm/srcm/stm32/stm32_eth.c:  Adds an Ethernet driver for the STM32 F4.
	* arch/arm/srcm/stm32/stm32_dac.c and stm32_adc.c: "Skeleton" files for STM32
	  DAC and ADC drivers.  The actual logic will come later.
	* arch/arm/srcm/stm32/stm32_eth.c:  There may be a few more lurking bugs, but
	  the STM32 Ethernet driver appears to be fully functional on the STM3240G-EVAL.
	* arch/arm/srcm/stm32/stm32_eth.c:  Fix an error in clearing abnormal interrupt
	  events.
	* configs/stm3240g-eval/dhcpd:  Add a DCHP daemon configuration for the
	  STM3240G-EVAL board.
	* configs/stm3240g-eval/nettest:  Add a network test configuration for the
	  STM3240G-EVAL board.
	* arch/arm/srcm/stm32/stm32_rtc.c, stm32f10xxx_rtc.c, and stm32f40xxx_rtc:
	  Broke out separate drivers to handle the very different RTC implementations
	  in the STM32 F1 and F4 family.
	* arch/arm/srcm/stm32/stm32f10xxx_rtc.c:  STM32 F4 RTC is functional (12/14/2011)