@@ -2267,3 +2267,4 @@
 	  Broke out separate drivers to handle the very different RTC implementations
 	  in the STM32 F1 and F4 family.
 	* arch/arm/srcm/stm32/stm32f10xxx_rtc.c:  STM32 F4 RTC is functional (12/14/2011)
+	* net/uip-arp.c: Fix compilation issue with CONFIG_NET_ARP_IPIN
